--- a/MDK-ARM/stm32_logger.uvprojx
+++ b/MDK-ARM/stm32_logger.uvprojx
@@ -340,7 +340,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32F767xx</Define>
               <Undefine></Undefine>
-              <IncludePath>../Core/Inc;../Drivers/STM32F7xx_HAL_Driver/Inc;../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy;../Drivers/CMSIS/Device/ST/STM32F7xx/Include;../Drivers/CMSIS/Include;../TASK;..\LOGGER</IncludePath>
+              <IncludePath>../Core/Inc;../Drivers/STM32F7xx_HAL_Driver/Inc;../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy;../Drivers/CMSIS/Device/ST/STM32F7xx/Include;../Drivers/CMSIS/Include;../TASK;..\LOGGER;..\TIME</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -563,6 +563,16 @@
               <FileName>logger.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\LOGGER\logger.cpp</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>TIME</GroupName>
+          <Files>
+            <File>
+              <FileName>time.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\TIME\time.cpp</FilePath>
             </File>
           </Files>
         </Group>
